# type

./: .readthedocs.yaml  README.md  Terms of Service.md  main.py  pyproject.toml  setup.cfg
.github/scripts/: releasemajor.py  releaseminor.py  releasepatch.py
.github/workflows/: publish.yml  python-publish.yml  releasemajor.yml  releaseminor.yml  releasepatch.yml
docs/: conf.py  index.rst
docs/source/: conf.py
src/terminaltyping/: main.py
