[tool.poetry]
name = "type"
version = "0.1.0"
description = "Single function module for typing"
authors = ["GreenHexagon <irrelevantpersonindividual@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"