[metadata]
name = Type
version = 0.1.0
author = GreenHexagon
author_email = irrelevantpersonindividual@gmail.com
description = Package for Typing Effects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GreenHexagon/type
project_urls =
    Bug Tracker = https://github.com/GreenHexagon/type/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src